@@ -1,15 +1,15 @@
 /****************************************************************************
  *
  * $Source: /usr/local/cvsroot/gccsdk/unixlib/source/unix/dev.c,v $
- * $Date: 2001/09/04 16:32:04 $
- * $Revision: 1.2.2.2 $
+ * $Date: 2001/12/18 11:20:13 $
+ * $Revision: 1.2.2.3 $
  * $State: Exp $
  * $Author: admin $
  *
  ***************************************************************************/
 
 #ifdef EMBED_RCSID
-static const char rcs_id[] = "$Id: dev.c,v 1.2.2.2 2001/09/04 16:32:04 admin Exp $";
+static const char rcs_id[] = "$Id: dev.c,v 1.2.2.3 2001/12/18 11:20:13 admin Exp $";
 #endif
 
 /* #define DEBUG */
@@ -162,12 +162,9 @@ __fsopen (struct __unixlib_fd *file_desc, const char *filename, int mode)
     }
   else
     {
-      /* No file exists.  */
-      if ((fflag & O_ACCMODE) == O_RDONLY && !(fflag & O_CREAT))
-	/* File doesn't exist and O_CREAT was not specified.  */
+      /* If no file exists and O_CREAT was not specified, return ENOENT.  */
+      if (!(fflag & O_CREAT))
 	return (void *) __set_errno (ENOENT);
-      /*if (fflag & O_ACCMODE)
-	fflag |= O_CREAT;*/
     }
 
   if (fflag & O_CREAT)
